Fix alignment of nav bar items

--- a/packages/xpub-ui/src/molecules/AppBar.local.scss
+++ b/packages/xpub-ui/src/molecules/AppBar.local.scss
@@ -30,6 +30,10 @@
   padding: 0 1rem;
 }
 
+.actions {
+  display: flex;
+}
+
 .username {
   margin-left: 0.3em;
 }
